--- a/quiz-programacao/src/App.css
+++ b/quiz-programacao/src/App.css
@@ -1,7 +1,11 @@
-#root {
-   margin: 0;
+*{
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Open Sans", sans-serif;
 }
-
+#root {
+  font-family: "Open Sans", sans-serif;
+  color: white;
+  background-color: #1c1c1c;
+  height: 100vh;
+}
