--- a/quiz-programacao/src/routes/Home.css
+++ b/quiz-programacao/src/routes/Home.css
@@ -3,7 +3,6 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
-  background-color: #1c1c1c;
   color: white;
 }
 #container-principal{
@@ -14,5 +13,8 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
+}
+#root{
+  background-color: #1c1c1c;
 }
 
